<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_edit_friend"
        layout="@layout/toolbar"></include>

    <include
        android:id="@+id/toolbar_shadow"
        layout="@layout/view_toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/toolbar_edit_friend"></include>

    <LinearLayout
        android:id="@+id/layout_friend_edit"
        style="@style/ll_namecard_edit"
        android:layout_below="@+id/toolbar_shadow"
        android:padding="@dimen/margin_m">

        <TextView
            style="@style/tv_remind"
            android:text="@string/namecard_edit_info" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_name"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_name" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_phone"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_phone" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_email"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_mail" />

    </LinearLayout>

    <LinearLayout
        style="@style/ll_namecard_edit"
        android:layout_below="@+id/layout_friend_edit"
        android:layout_marginTop="8dp"
        android:padding="@dimen/margin_m">

        <TextView
            style="@style/tv_remind"
            android:text="@string/namecard_edit_info_company" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_company_name"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_name_company" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_department"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_dept" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_friend_post"
            style="@style/ed_commom"
            android:hint="@string/namecard_edit_post" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2xm"
        android:layout_alignParentBottom="true"
        android:background="@drawable/common_actionbar_bottom_bg"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_action_bottom_save"
            style="@style/actionbar_bottom_ripplelayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    style="@style/iv_bottom"
                    android:src="?attr/chat_sendbar_ok" />

                <TextView
                    style="@style/tv_ripple_bottom"
                    android:text="@string/actionbar_bottom_save" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>