<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/layout_commom_white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_4xm"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/ll_name_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/namecard_card" />

                <TextView
                    style="@style/tv_commom"
                    android:layout_marginTop="@dimen/margin_s"
                    android:text="@string/contact_card"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_talk_group"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/namecard_group" />

                <TextView
                    style="@style/tv_commom"
                    android:layout_marginTop="@dimen/margin_s"
                    android:text="@string/contact_group"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_org"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/namecard_org" />

                <TextView
                    style="@style/tv_commom"
                    android:layout_marginTop="@dimen/margin_s"
                    android:text="@string/contact_org"
                    android:textColor="?attr/colorAccent" />
            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_colleague"
                style="@style/rc_putitem" />

            <com.xm.zeus.extend.RecyclerViewFastScroller
                android:id="@+id/friend_fast_scroller"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignBottom="@id/rv_colleague"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@id/rv_colleague" />


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>