<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar_personal_info"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:id="@+id/rl_usercard_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_personal_info"
        android:background="?attr/colorPrimary">

        <TextView
            android:id="@+id/tv_name"
            style="@style/tv_title"
            android:layout_marginLeft="@dimen/width_4xm"
            android:layout_marginTop="@dimen/margin_s"
            android:text="李小明"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/tv_department"
            style="@style/tv_remind"
            android:layout_alignLeft="@+id/tv_name"
            android:layout_alignStart="@+id/tv_name"
            android:layout_below="@+id/tv_name"
            android:layout_marginTop="@dimen/margin_s"
            android:paddingBottom="@dimen/margin_m"
            android:text="研发部 开发工程师"
            android:textColor="?android:textColorTertiary" />

    </RelativeLayout>

    <include
        android:id="@+id/toolbar_shadow"
        layout="@layout/view_toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_s"
        android:layout_below="@id/rl_usercard_head"></include>

    <LinearLayout
        android:id="@+id/ll_person_action_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_2xm"
        android:layout_alignParentBottom="true"
        android:background="@drawable/common_actionbar_bottom_bg"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_action_bottom_chat"
            style="@style/actionbar_bottom_ripplelayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_actionbar_inchat"
                    style="@style/iv_bottom"
                    android:src="?attr/icon_inchat" />

                <TextView
                    style="@style/tv_ripple_bottom"
                    android:text="@string/actionbar_bottom_chat" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_action_bottom_history"
            style="@style/actionbar_bottom_ripplelayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_actionbar_history"
                    style="@style/iv_bottom"
                    android:src="?attr/icon_history" />

                <TextView
                    style="@style/tv_ripple_bottom"
                    android:text="@string/actionbar_bottom_history" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_action_bottom_delete"
            style="@style/actionbar_bottom_ripplelayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_actionbar_delete"
                    style="@style/iv_bottom"
                    android:src="?attr/icon_delete" />

                <TextView
                    style="@style/tv_ripple_bottom"
                    android:text="@string/actionbar_bottom_delete" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_action_bottom_edit"
            style="@style/actionbar_bottom_ripplelayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_actionbar_modify"
                    style="@style/iv_bottom"
                    android:src="?attr/icon_modify" />

                <TextView
                    style="@style/tv_ripple_bottom"
                    android:text="@string/actionbar_bottom_edit" />
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/sl_personifo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_person_action_bottom"
        android:layout_below="@id/toolbar_shadow"
        android:background="?attr/color_bg_commom"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_l"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rl_usercard_phone"
                style="@style/actionbar_ordinay_ripplelayout"
                android:layout_height="@dimen/height_4xm">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ly_usercard_phone"
                        android:layout_width="@dimen/width_4xm"
                        android:layout_height="@dimen/height_4xm">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_l"
                            android:src="?attr/personalcard_phone" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_person_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_usercard_phone"
                            style="@style/tv_commom"
                            android:text="111111" />

                        <TextView
                            style="@style/tv_remind"
                            android:layout_marginTop="4dp"
                            android:text="Moblie" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>


            <include layout="@layout/view_divider_lineshort" />

            <RelativeLayout
                android:id="@+id/rl_usercard_email"
                style="@style/actionbar_ordinay_ripplelayout"
                android:layout_height="@dimen/height_4xm">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ly_usercard_email"
                        android:layout_width="@dimen/width_4xm"
                        android:layout_height="@dimen/height_4xm">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_l"
                            android:src="?attr/personalcard_message" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_usercard_email"
                            style="@style/tv_commom"
                            android:text="12345678@gmail.com" />

                        <TextView
                            style="@style/tv_remind"
                            android:layout_marginTop="4dp"
                            android:text="E-Mail" />
                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <include layout="@layout/view_divider_lineshort" />

            <RelativeLayout
                android:id="@+id/rl_usercard_company"
                style="@style/actionbar_ordinay_ripplelayout"
                android:layout_height="@dimen/height_5xm">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ly_usercard_local"
                        android:layout_width="@dimen/width_4xm"
                        android:layout_height="@dimen/height_4xm">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/margin_l"
                            android:src="?attr/personalcard_location" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_person_company"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_usercard_company"
                            style="@style/tv_commom"
                            android:layout_marginTop="@dimen/margin_m"
                            android:text="厦门普杰信息科技有限公司" />

                        <TextView
                            android:id="@+id/tv_usercard_address"
                            style="@style/tv_remind"
                            android:layout_marginTop="4dp"
                            android:text="厦门市莲前西路281号道路研发中心4楼" />
                    </LinearLayout>


                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_avatar"
        android:layout_width="@dimen/width_4xm"
        android:layout_height="@dimen/height_4xm"
        android:layout_alignBottom="@+id/rl_usercard_head"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="-36dp"
        android:layout_marginRight="@dimen/margin_m"
        android:background="?attr/drable_personal_circle"
        app:failureImage="?attr/contacts_head_man"
        app:placeholderImage="?attr/contacts_head_man"
        app:progressBarImage="?attr/contacts_head_man"
        app:roundAsCircle="true" />

</RelativeLayout>


